z-index fix

--- a/frontend/public/styles/nav.css
+++ b/frontend/public/styles/nav.css
@@ -11,7 +11,7 @@
 	justify-content: center;
 	align-items: center;
 	/* background-color: white; */
-	z-index: 1;
+	z-index: 2;
 }
 
 #nav-bar-link {
@@ -194,5 +194,12 @@
 	#nav-bar-link > button.text-selected {
 		color: white !important;
 		background: rgba(255, 110, 0, 0.6);
+	}
+
+	#nav-bar #nav-bar-pan-left {
+		width: 10%;
+	}
+	#nav-bar #nav-bar-pan-right {
+		width: 10%;
 	}
 }
